# CntNotDivisible

./: CMakeLists.txt  README.md  fun.cpp  header.h  uTest.cpp
